janus-mcp-server/deploy/openshift/patch-service.yml
apiVersion: v1
kind: Service
metadata:
  name: janus-mcp-server
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: janus-mcp-tls-serving
